--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
         <thead>
 
-            <tr class="linha1">
-                <th rowspan="2" class="semnada"></th>
-                <th class="linha__primary"><h5>Self-Employed & Freelance</h5></th>
-                <th colspan="3" class="linha__second"><h5>Small business that need accounting, invoicing or payroll</h5></th>
+            <tr>
+                <th rowspan="2" class="sem-nada"></th>
+                <th class="linha-primary"><h5>Self-Employed & Freelance</h5></th>
+                <th colspan="3" class="linha-second"><h5>Small business that need accounting, invoicing or payroll</h5></th>
                 
             </tr>
             <tr>
@@ -43,65 +43,65 @@
 
         <tbody>
 
-            <tr class="tbody__linha1">
+            <tr class="tbody-linha-1">
                 <td>Separate business/personal</td>
-                <td>✔</td>
+                <td class="check-azul">✔</td>
                 <td></td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td>Estimate tax payment</td>
-                <td>✔</td>
+                <td class="check-azul">✔</td>
                 <td></td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td>Track deductible mileage</td>
-                <td>✔</td>
+                <td class="check-azul">✔</td>
                 <td></td>
                 <td></td>
                 <td></td>
             </tr>
             <tr>
                 <td>Download online banking</td>
-                <td>✔</td>
-                <td>✔</td>
-                <td>✔</td>
-                <td>✔</td>
+                <td class="check-azul">✔</td>
+                <td class="check-verde">✔</td>
+                <td class="check-verde">✔</td>
+                <td class="check-verde">✔</td>
             </tr>
 
             <tr>
                 <td>Muiti-device</td>
-                <td>✔</td>
-                <td>✔</td>
-                <td>✔</td>
-                <td>✔</td>
+                <td class="check-azul">✔</td>
+                <td class="check-verde">✔</td>
+                <td class="check-verde">✔</td>
+                <td class="check-verde">✔</td>
             </tr>
 
             <tr>
                 <td>Create invoices & estimates</td>
                 <td></td>
-                <td>✔</td>
-                <td>✔</td>
-                <td>✔</td>
+                <td class="check-verde">✔</td>
+                <td class="check-verde">✔</td>
+                <td class="check-verde">✔</td>
             </tr>
 
             <tr>
                 <td>Manage VAT</td>
                 <td></td>
-                <td>✔</td>
-                <td>✔</td>
-                <td>✔</td>
+                <td class="check-verde">✔</td>
+                <td class="check-verde">✔</td>
+                <td class="check-verde">✔</td>
             </tr>
 
             <tr>
                 <td>Run payroll</td>
                 <td></td>
-                <td>✔</td>
-                <td>✔</td>
-                <td>✔</td>
+                <td class="check-verde">✔</td>
+                <td class="check-verde">✔</td>
+                <td class="check-verde">✔</td>
             </tr>
 
             <tr>
